--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,18 @@
 <project>
+  <dependencies>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>1.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+  </dependencies>
     <modelVersion>4.0.0</modelVersion>
     <groupId>ru.kambulov</groupId>
     <artifactId>junior</artifactId>
