--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,14 @@
     <version>2.0</version>
     <name>junior</name>
     <url>http://job4j.ru/</url>
-
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
     <modules>
         <module>chapter_001</module>
     </modules>
-
     <build>
         <plugins>
             <plugin>
@@ -47,4 +44,18 @@
             </plugin>
         </plugins>
     </build>
+	<dependencies>
+    <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>1.3</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
 </project>
