--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     </properties>
     <modules>
         <module>chapter_001</module>
+        <module>chapter_002</module>
+        <module>chapter_002</module>
     </modules>
     <build>
         <plugins>
